Suma ok todos signos

--- a/p1/.vscode/launch.json
+++ b/p1/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Iniciar",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/main",
-            "args": ["board.txt"],
+            "program": "${workspaceFolder}/bin/operations",
+            "args": ["../input/board.txt"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
