--- a/p3/p3original/.vscode/launch.json
+++ b/p3/p3original/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/operations",
-            "args": ["../input/board.txt"],
+            "args": ["input/board.txt"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
