Especializacion BigInt2 incluida

--- a/p3/p3original/makefile
+++ b/p3/p3original/makefile
@@ -4,8 +4,10 @@ MAIN = main/
 MAIN_FILE = $(MAIN)main.cpp
 SRC = src/
 BIG = $(SRC)BigInt/
+BIG_BASE = $(BIG)/Base_Class/
+BIG_DER = $(BIG)/Derived_Class/
 CALC = $(SRC)Calculator/
-SRC_FILES = $(BIG)Base_Class/Number.cpp
+SRC_FILES = $(BIG_BASE)Number.cpp $(BIG_DER)BigInt2.cpp
 BIN = bin/
 EXE_FILE = $(BIN)operations
 IN = input/
