Varios cambios AVL

--- a/practicas/p6/makefile
+++ b/practicas/p6/makefile
@@ -6,11 +6,15 @@ TEST_FILE = $(MAIN)test.cpp
 OUT = bin/
 OUT_FILE = $(OUT)p6
 OUT_TEST_FILE = $(OUT)test
+OUT_TRACE_FILE = $(OUT)p6_trace
 
 # Reglas explícitas
 
 default:
 	g++ -std=c++14 -g -Wall $(MAIN_FILE) -o $(OUT_FILE)
+
+trace:
+	g++ -DTRAZA -std=c++14 -g -Wall $(MAIN_FILE) -o $(OUT_TRACE_FILE)
 
 test:
 	g++ -std=c++14 -g -Wall $(TEST_FILE) -o $(OUT_TEST_FILE)
@@ -18,10 +22,8 @@ test:
 run:
 	$(OUT_FILE)
 
-file:
-	$(OUT_FILE) $(IN_FILE)
-
-run-file: default file
-
 run-test:
 	$(OUT_TEST_FILE)
+
+run-trace:
+	$(OUT_TRACE_FILE)
