--- a/practicas/p6/.vscode/launch.json
+++ b/practicas/p6/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Iniciar",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/p6",
+            "program": "${workspaceFolder}/bin/p6_trace",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
